<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/round_background"
        android:padding="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/average"
            android:textColor="@color/secondaryColor"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewMeasurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/dimen_42sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAverage"
            tools:text="100.00" />

        <TextView
            android:id="@+id/textViewUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4dp"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/dimen_14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewMeasurement"
            app:layout_constraintStart_toEndOf="@+id/textViewMeasurement"
            tools:text="@string/mmol_l" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAmountField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@drawable/border_background"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMeasurementUnits">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextMeasurement"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@null"
            android:hint="@string/_0_0"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:textAlignment="viewEnd"
            android:textColor="@color/onBackgroundColor"
            android:textColorHint="@color/greyColor"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/dimen_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/dimen_2dp"
            android:layout_height="@dimen/dimen_48dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewUnitLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewUnitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:textColor="@color/onBackgroundColor"
            android:textSize="@dimen/dimen_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mmol_l" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_48dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:background="@drawable/round_button_background"
        android:text="Save"
        android:textColor="@color/onPrimaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayoutAmountField" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewMeasurementUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/measurement_units"
        android:textColor="@color/onBackgroundColor"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAverage" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_24dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewMeasurementUnits"
        app:layout_constraintTop_toTopOf="@+id/textViewMeasurementUnits">

        <RadioButton
            android:id="@+id/radioMmol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mmol_l"
            android:textSize="@dimen/dimen_16sp" />

        <RadioButton
            android:id="@+id/radioMg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:text="@string/mg_dl"
            android:textSize="@dimen/dimen_16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewHistory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:fontFamily="sans-serif-medium"
        android:text="History"
        android:textColor="@color/secondaryColor"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutAmountField" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHistory"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="10"
        tools:listitem="@layout/list_item_measurements"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>